feat: increase test coverage